# text-to-json

./: .env.example  README.md  main.py  pyproject.toml
documentation/: implementation-log.md  solution-design.md
test-cases/test-case-3/: Ankur_Resume.json
test-cases/test-case-3/input/: Ankur_Resume.txt
test-cases/test-case-3/output/: Ankur_Resume.json
